--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 Django==5.0.1
 factory-boy==3.3.0
 Faker==22.5.1
+Pygments==2.17.2
 python-dateutil==2.8.2
 six==1.16.0
 sqlparse==0.4.4
