--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,5 @@ requires-python = ">=3.11"
 dependencies = ["sqlparse>=0.4.4", "Pygments>=2.17.2"]
 
 [project.urls]
-Homepage = "hhttps://github.com/PaulOnyekwelu/dj-sql-inspect"
+Homepage = "https://github.com/PaulOnyekwelu/dj-sql-inspect"
+Issues = "https://github.com/PaulOnyekwelu/dj-sql-inspect/issues"
