--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.7.2
 build==1.0.3
+cachetools==6.0.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
+colorama==0.4.6
 Django==5.0.1
 docutils==0.20.1
 Faker==22.5.1
@@ -16,20 +18,23 @@ more-itertools==10.2.0
 nh3==0.2.15
 packaging==23.2
 pkginfo==1.9.6
-pluggy==1.4.0
+pluggy==1.6.0
 Pygments==2.17.2
 pyproject_hooks==1.0.0
-pytest==8.0.0
+pytest==8.3.5
+pytest-asyncio==1.0.0
 pytest-django==4.7.0
 python-dateutil==2.8.2
+pywin32-ctypes==0.2.3
 readme-renderer==42.0
 requests==2.31.0
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.7.0
 six==1.16.0
-sql-inspect==1.0.1
+-e git+ssh://git@github.com/AgenticAiLabs/sql-inspect.git@6d7967bad76d1c5ff526be09b6760499c17ee600#egg=sql_inspect
 sqlparse==0.4.4
 twine==4.0.2
+tzdata==2025.2
 urllib3==2.1.0
 zipp==3.17.0
