--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+alabaster==1.0.0
 asgiref==3.7.2
+babel==2.17.0
+beautifulsoup4==4.13.4
 build==1.0.3
 cachetools==6.0.0
 certifi==2023.11.17
@@ -7,15 +10,21 @@ colorama==0.4.6
 Django==5.0.1
 docutils==0.20.1
 Faker==22.5.1
+furo==2024.8.6
 id==1.5.0
 idna==3.6
+imagesize==1.4.1
 importlib-metadata==7.0.1
 iniconfig==2.0.0
 jaraco.classes==3.3.0
+Jinja2==3.1.6
 keyring==24.3.0
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdit-py-plugins==0.4.2
 mdurl==0.1.2
 more-itertools==10.2.0
+myst-parser==4.0.1
 nh3==0.2.15
 packaging==25.0
 pkginfo==1.10.0
@@ -27,15 +36,28 @@ pytest-asyncio==1.0.0
 pytest-django==4.7.0
 python-dateutil==2.8.2
 pywin32-ctypes==0.2.3
+PyYAML==6.0.2
 readme-renderer==42.0
 requests==2.31.0
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.7.0
+roman-numerals-py==3.1.0
 six==1.16.0
+snowballstemmer==3.0.1
+soupsieve==2.7
+Sphinx==8.2.3
+sphinx-basic-ng==1.0.0b2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 -e git+ssh://git@github.com/AgenticAiLabs/sql-inspect.git@ac8e77eda62be38a4b1ce8b60f5dcddf0d7d4092#egg=sql_inspect
 sqlparse==0.4.4
 twine==6.1.0
+typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.1.0
 zipp==3.17.0
