--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ include = ["sql_inspect"]
 
 [project]
 name = "sql-inspect"
-version = "2.0.0"
+version = "2.0.1"
 description = "Enhanced Django middleware for monitoring, analyzing, and optimizing database SQL queries"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -27,5 +27,6 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/AgenticAiLabs/sql-inspect"
+Homepage = "https://sql-inspect.readthedocs.io/en/latest/"
+Repository = "https://github.com/AgenticAiLabs/sql-inspect"
 Issues = "https://github.com/AgenticAiLabs/sql-inspect/issues"
